* map
  - Airspace: add option to re-enable stencil buffer on PPC2000
* other
  - select waypoint: update heading filter only on large changes
  - reduce dialog memory usage
* Windows
  - compile vali-xcs.exe as console application
* Android
  - fix crash due to invalid UTF-8 labels
  - more pause/resume crash fixes
  - take advantage of ARMv7 CPUs
* Linux
  - implement the serial port

Version 6.0.5 - 2011/02/26
* devices:
  - EWMicroRecorder: fix hang during task declaration
  - FLARM: parse PGRMZ as altitude above 1013.25 hPa
* user interface
  - scale the "Today Screen" buttons on large screens
  - fix page numbers in satellite image renderer
  - generate satellite file name from original waypoint id
* map
  - terrain: permanently disable failed tiles
  - terrain: fix "unexpected marker segment type" error
  - AAT: don't draw "dead zone" on ancient hardware (PPC2000)
  - Airspace: disable stencil buffer on ancient hardware (PPC2000)
* Android
  - fix bitmap loading on Samsung Galaxy Tab
  - show Bluetooth device names in configuration dialog
  - larger default fonts
  - improved airspace rendering
* Altair
  - fix dialog hot keys
  - task editor: bind F5/F6 to move up/down

Version 6.0.4 - 2011/02/19
* devices
  - EWMicroRecorder: parse PGRMZ as altitude above 1013.25 hPa
  - FlymasterF1: convert pressure to altitude
  - FlymasterF1: don't override the baro altitude of the primary device
  - LX: parse LXWP0 as altitude above 1013.25 hPa
  - Zander: PZAN1 contains QNH altitude
  - Zander: verify checksum
  - don't force cruise mode when no Vega/B50 is present
* user interface
  - prevent potential crash while using flarm radar dialogs
  - improve behaviour if "circling zoom" is disabled
  - vario: fix circling mode display
* map
  - enable terrain and topology by default
  - Terrain: load fewer raster tiles on Altair
* task
  - abort: for non-final glide options, don't prefer airports
  - task manager: reduce memory usage
* configuration